--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+.counter{
+    background-color: darkslategray;
+    padding: 40px;
+    position: fixed; top: 5%; left: 10%;
+    border-style: solid;
+    border-color: cadetblue ;
+}
+.phone{
+   margin-left:1%;
+    width: 100%;
+    text-align: center;
+    border: 1px solid;
+    background-color: cadetblue;
+}
+.phone-error{
+    margin-left:1%;
+    width: 100%;
+    text-align: center;
+    border: 1px solid;
+    background-color: burlywood;
+}
+.button{
+background-color: cadetblue;
+    border: 1px solid;
+    border-radius: 10px;
+    margin: 2px;
+}
+.button:active{
+    background-color: burlywood;
+    border: 1px solid;
+    border-radius: 10px;
+    margin: 2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bord-button{
+    border: 1px solid;
+    border-radius: 10px;
+}
+.error-button{
+    background-color: gray;
+    border: 1px solid;
+    border-radius: 10px;
+    margin: 2px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
