--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,16 @@
 .app {
-    height: 100vh;
+    width: 150px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
 }
 
 .app > div {
-
+margin: 2px;
 }
 
 .phone {
     height: 100px;
     width: 150px;
     border: solid 2px black;
-
-
-
 }
 
 .phone-error {
@@ -34,6 +27,7 @@
     margin: 1px;
     font-weight: bold;
     font-size: 24px;
+
 }
 
 .button:active {
@@ -59,18 +53,44 @@
 }
 
 .input {
-    display: flex;
     width: 30px;
-    margin-left: 50%
-
+    margin-left: 40px;
+    display: inline-block;
+    border-radius: 2px;
 }
 
 .point {
     text-align: center;
     font-size: 50px;
+    margin-left: 60px;
 
+}
+.error-point{
+    text-align: center;
+    font-size: 10px;
+    color: black;
+}
+.error-input{
+    width: 30px;
+    margin-left: 40px;
+    display: inline-block;
+    border-radius: 3px;
+    background-color: red;
 }
 .label{
     flex-direction: column;
+
+}
+.inputLabel{
+    font-size: 12px;
+    background-color: burlywood;
+    display: inline-block;
+    margin: 2px;
+    border: solid 2px black;
+}
+.error-point-input{
+    text-align: center;
+    font-size: 10px;
+    color: red;
 }
 
