--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,7 @@
 .app {
-    width: 300px;
-
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.app > div {
-margin: 2px;
-
-}
-
-.phone {
-    height: 100px;
-    width: 150px;
-    border: solid 2px black;
-}
-
-.phone-error {
-    height: 100px;
-    width: 150px;
-    border: solid 2px black;
-    background-color: coral;
-}
-
-.button {
-    background-color: cadetblue;
-    border: 1px solid;
-    border-radius: 10px;
-    margin: 1px;
-    font-weight: bold;
-    font-size: 24px;
-
-}
-
-.button:active {
-    background-color: burlywood;
-    border: 1px solid;
-    border-radius: 10px;
-    margin: 1px;
-    font-size: 24px;
-}
-
-.bord-button {
-    border: 1px solid;
-    border-radius: 10px;
-    margin: 1px;
-}
-
-.error-button {
-    background-color: gray;
-    border: 1px solid;
-    border-radius: 10px;
-    margin: 2px;
-    font-size: 24px;
-}
-
-.input {
-    width: 30px;
-    margin-left: 40px;
-    display: inline-block;
-    border-radius: 2px;
-}
-
-.point {
-    text-align: center;
-    font-size: 50px;
-    margin-left: 60px;
-
-}
-.error-point{
-    text-align: center;
-    font-size: 10px;
-    color: black;
-}
-.error-input{
-    width: 30px;
-    margin-left: 40px;
-    display: inline-block;
-    border-radius: 3px;
-    background-color: red;
-}
-.label{
-    flex-direction: column;
-
-}
-.inputLabel{
-    font-size: 12px;
-    background-color: burlywood;
-    display: inline-block;
-    margin: 2px;
-    border: solid 2px black;
-}
-.error-point-input{
-    text-align: center;
-    font-size: 10px;
-    color: red;
-}
 
